fix styling and responsive (#89)
* feat: create base folder structure for the profile page

* feat: create base html structure of PersonalInformation component

* style: create index.css for PersonalInformation

* feat: improve html in personalInfo

* add extra space in profile component

* style: add color variables in profile

* style: add style for the edit button

* style: add style for the main info box in personalInformation

* style: finish style main info box in personalInformation

* test: build test for the personalInformation component

* feat: add personal blogPosts component's base html structure

* feat: add translation in english

* test: update tests

* style: style the button write post

* test: update test

* feat: create base html structure of personal blog posts component

* feat: create the renderBlogPost component html and style

* style: add hover effect for images

* style: add hover effect to blog posts

* feat: add modal for edit profile

* feat: create edit profile component

* add props in edit profile

* feat: add form to the edit profile component

* feat: add file input in form in edit profile

* feat: write translation in English

* feat: add translation in English for the edit profile page

* run yarn fix

* fix input types and translation

* feat: create and save input in edit profile

* run yarn fix

* test: add tests

* test: update tests

* Feat: create SignIn component

* Feat: sign in functionality, fix firebase config

* style: change buttons' backgrounds

* run yarn fix

* yarn run fix

* test: add test for RenderBlogPost in Profile

* Style: add button style

* Feat: redirection when logged in and showing error msg

* Test: create snapshot test

* Fix: yarn fix

* Fix: yarn test

* Fix: delete unused imports

* add curly bracket around handleInputChange's return value

* run yarn fix

* Auth: add Facebook and Google sign-in

* Style

--- a/src/components/SingleFeature/index.css
+++ b/src/components/SingleFeature/index.css
@@ -1,11 +1,8 @@
-.imgclass {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: space-around;
-}
-
 .featuresImg {
   max-width: 100%;
   height: 100%;
+}
+
+.featText {
+  text-align: center;
 }
